# Interconnect

./: .gitignore  README.md
.github/workflows/: ci.yml
CitadelInterconnectBackend/Api/: Program.cs
CitadelInterconnectBackend/ServicesTests/: VersionService.cs
InterconnectBackend/: .gitignore  Doxyfile  InterconnectBackend.sln
InterconnectBackend/BackgroundServices/: BackgroundServices.csproj  BackgroundServicesInitializer.cs
InterconnectBackend/Controllers/: Controllers.csproj  EntityController.cs  HypervisorConnectionController.cs  InfoController.cs  VirtualMachineController.cs  VirtualMachineEntityController.cs  VirtualMachineManagerController.cs  VirtualNetworkController.cs  VmManagerController.cs
InterconnectBackend/ControllersTests/: ControllersTests.csproj  HypervisorConnectionControllerTests.cs  InfoControllerTests.cs  VirtualMachineControllerTests.cs  VirtualMachineEntityControlerTests.cs  VirtualMachineManagerControllerTests.cs
InterconnectBackend/Database/: Database.csproj  Database.sln  InterconnectDbContext.cs
InterconnectBackend/FrontHostApi/: Program.cs
InterconnectBackend/Hubs/: ConnectionStatusHub.cs  Hubs.csproj  PacketSnifferHub.cs  VirtualMachineConsoleHub.cs
InterconnectBackend/HubsTests/: ConnectionStatusHubTests.cs  HubsTests.csproj  VirtualMachineConsoleHubTests.cs
InterconnectBackend/Interconnect/: Interconnect.csproj  Program.cs  appsettings.json
InterconnectBackend/InterconnectTests/: ExceptionHandlerMiddlewareTests.cs  InterconnectTests.csproj
InterconnectBackend/Mappers/: BootableDiskModelMapper.cs  ConnectionInfoToConnectionInfoResponse.cs  InternetEntityMapper.cs  Mappers.csproj  NativeConnectionInfoMapper.cs  NativeConnectionInfoToConnectionInfoMapper.cs  NativeStreamDataMapper.cs  NativeVirtualMachineInfoMapper.cs  NativeVirtualMachineInfoToVirtualMachineInfo.cs  VirtualMachineEntityMapper.cs  VirtualNetworkEntityConnectionMapper.cs  VirtualNetworkNodeEntityMapper.cs  VirtualSwitchEntityMapper.cs
InterconnectBackend/Mocks/: ResponseExtractor.cs  TestMocks.cs  TestUtils.csproj
InterconnectBackend/Models/: BaseEntity.cs  ConnectionInfo.cs  CreatedNetworkInfo.cs  InformationModel.cs  Packet.cs  PacketSniffer.cs  StreamData.cs  StreamInfo.cs  TerminalData.cs  VirtualMachineCreateDefinition.cs  VirtualMachineInfo.cs  VirtualNetworkCreateDefinition.cs  VirtualNetworkInterfaceCreateDefinition.cs
InterconnectBackend/NativeLibrary/: Constants.cs  ExecutionInfoAnalyzer.cs  InterconnectLibrary.cs  Library.csproj  LibraryInitializer.cs  NativeLibrary.csproj
InterconnectBackend/Repositories/: IBootableDiskRepository.cs  IInternetEntityRepository.cs  IPacketSnifferRepository.cs  IVirtualMachineConsoleDataRepository.cs  IVirtualMachineConsoleStreamRepository.cs  IVirtualMachineEntityNetworkInterfaceRepository.cs  IVirtualMachineEntityRepository.cs  IVirtualNetworkConnectionRepository.cs  IVirtualNetworkEntityConnectionRepository.cs  IVirtualNetworkNodeEntityRepository.cs  IVirtualNetworkRepository.cs  IVirtualSwitchEntityRepository.cs  RepositoriesInitializer.cs
InterconnectBackend/RepositoriesTests/: BootableDiskRepositoryTests.cs  InternetEntityRepositoryTests.cs  RepositoriesTests.csproj  VirtualMachineConsoleDataRepositoryTests.cs  VirtualMachineConsoleStreamRepositoryTests.cs  VirtualMachineEntityRepositoryTests.cs  VirtualNetworkConnectionRepositoryTests.cs  VirtualNetworkEntityConnectionRepositoryTests.cs  VirtualNetworkNodeEntityRepositoryTests.cs  VirtualSwitchEntityRepositoryTests.cs
InterconnectBackend/Services/: IBootableDiskProviderService.cs  IDeleteEntityService.cs  IEntitiesConnectorService.cs  IEntitiesDisconnectorService.cs  (+15 more)
InterconnectFrontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  setupTests.ts  tsconfig.node.json  vitest.config.ts
InterconnectLibrary/: .gitignore  CMakeLists.txt  Doxyfile  Makefile
InterconnectLibrary/.devcontainer/: Dockerfile
InterconnectLibrary/src/: CMakeLists.txt  InterconnectLibraryExtern.cpp  LibvirtWrapper.cpp  LibvirtWrapper.h  PacketSnifferLibraryExtern.cpp  VirtualMachineManager.cpp  VirtualMachineManager.h  VirtualizationLibraryExtern.cpp  virtual_machine_manager.cpp  virtual_machine_manager.h
InterconnectLibrary/src/exceptions/: ConnectionToVMBackendFailed.cpp  ConnectionToVMBackendFailed.h  CreateVirtualMachineFailed.h  NoActiveVMBackendConnection.h  PacketSnifferException.h  VirtualMachineManagerException.h  VirtualizationException.h
InterconnectLibrary/src/interfaces/: ILibpcapWrapper.h  ILibvirtWrapper.h
InterconnectLibrary/src/models/: ConnectionInfo.h  ExecutionInfo.h  IdentifiedStream.h  ListenCallbackArgs.h  NetworkDefinition.h  Packet.h  StreamData.h  Version.h  VirtualMachineInfo.h
InterconnectLibrary/src/packetsniffer/: PacketSniffer.cpp  PacketSniffer.h
InterconnectLibrary/src/utils/: ExecutionInfoObtainer.cpp  ExecutionInfoObtainer.h  StringUtils.cpp  StringUtils.h  VersionUtils.cpp  VersionUtils.h
InterconnectLibrary/src/virt/: VirtualizationFacade.cpp  VirtualizationFacade.h
InterconnectLibrary/src/virt/managers/: BaseManagerWithConnection.cpp  BaseManagerWithConnection.h  ConnectionManager.cpp  ConnectionManager.h  VirtualMachineConsoleManager.cpp  VirtualMachineConsoleManager.h  VirtualMachineManager.cpp  VirtualMachineManager.h  VirtualNetworkManager.cpp  VirtualNetworkManager.h
InterconnectLibrary/src/wrappers/: LibpcapWrapper.cpp  LibpcapWrapper.h  LibvirtWrapper.cpp  LibvirtWrapper.h
InterconnectLibrary/tests/: CMakeLists.txt  ConnectionManagerTests.cpp  StringUtils.cpp  TestingUtils.cpp  TestingUtils.h  VirtualMachineConsoleManager.cpp  VirtualMachineManager.cpp  VirtualMachineManagerTests.cpp  VirtualNetworkManagerTests.cpp  library_test.cpp
InterconnectLibrary/tests/mocks/: LibvirtWrapperMock.h  LibvirtWrapperMockTests.h  VirtualMachineConsoleManagerMockedStreams.h  VirtualMachineManagerMockGetInfoAboutVirtualMachine.h
InterconnectLibrary/tests/utils/: ExecutionInfoObtainerTests.cpp  StringUtilsTests.cpp  VersionUtilsTests.cpp
frontend/: package-lock.json  package.json  tsconfig.app.json
(+456 files in other folders)
